--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-     <meta charset="UTF-8"
-    <meta name="viewport" contend="width"
+     <meta charset="UTF-8">
+     <meta name="viewport" contend="width="width=device-width, initial-scale="1.0">
+    <title>home | nossa escola</title>
+    <link rel="styleheet" href="style.css">
 </head>
+<body>
+    <!--header é a parte do cabeçalho do site, é o topo da página -->
+    <header class="cabecalho-itens" src=""
 
 
 
+
+</body>
 </html>
