--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html lang="pt-br">
 <head>
      <meta charset="UTF-8">
-     <meta name="viewport" contend="width="width=device-width, initial-scale="1.0">
-    <title>home | nossa escola</title>
-    <link rel="styleheet" href="style.css">
+     <meta name="viewport" contend="width=device-width, initial-scale=1.0">
+     <title>Home | Nossa Escola</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--header é a parte do cabeçalho do site, é o topo da página -->
-    <header class="cabecalho-itens" src=""
-
-
-
-
+     <!--header é a parte do cabeçhalho do site, é o topo da página-->
+     <header class="cabecalho-itens">
+          <img class="cabecalho_imagem" src="logo_page.png"  alt="Logo da Página">
+          <h1 class="titulo_site">Nossa Escola</h1>
+          <div class="sociais">
+               <img class="sociais" src="whatsapp.png" alt="Whats da Escola">
+               <img class="sociais" src="facebook.png" alt="Facebook da Escola">
+               <img class="sociais" src="Instagram.png" alt="instagram da Escola"> 
+          </div>
+ </header> 
+ <!---Seção banner 1 - equivalente ao primeiro parágrafo-->
+ <section class="banner1">
+     <img class="escola.image" src="banner.png" alt="Banner da Escola">
+ </section>
 </body>
+
+
+
 </html>
