--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p> </p>
     <div class="estudantes_todos">
     <div class="estudante-div">
-    <img class="estudante-imagem" src="aluno.png" alt="Foto da turma do 2DDS do ano de 2024">
+    <img class="estudante-imagem" src="aluno.png" alt="Foto da turma do 2°dds do ano de 2024">
          
     <div class="estudante-div">
      <img class="estudante-imagem" src="aluno.png" alt="Foto daturma do 2°dds do ano de 2024">
